--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
           <h1></h1>
   <nav>
    <ul>
-     <li class="home"><a href="index.html">Home</a></li> 
-              <li class="home"><a href="história.html">História</a></li>
-              <li class="home"><a href="Ações.html">Ações</a></li>
+     <li class="home"><a href="index.html"></a></li> 
+              <li class="home"><a href=""></a></li>
+              <li class="home"><a href=""></a></li>
               <li class="home"><a href="contato.html">Contato</a></li>
            </ul>
          </nav>
