--- a/index.html
+++ b/index.html
@@ -6,20 +6,12 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" href="reset.css">
  <link rel="stylesheet" href="style.css">
- <title>Projeto Social Porto Seguro</title>
+ <title>bbbbb</title>
 </head>
 <body>
     <header>
   <img id="imagem-principal" src="imagem1.jpeg">
-          <h1></h1>
-  <nav>
-   <ul>
-     <li class="home"><a href="index.html"></a></li> 
-              <li class="home"><a href=""></a></li>
-              <li class="home"><a href=""></a></li>
-              <li class="home"><a href="contato.html">Contato</a></li>
-           </ul>
-         </nav>
+          <h1>colocar um texto</h1>
 	
  </header>
 
