--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <main>
   
   <div class="principal">
-   <h2 strong>Missão do Projeto</h2>
+   <h2 strong>continuação de texto</h2>
    <p>
    </p>
      </div>
