--- a/index.html
+++ b/index.html
@@ -10,18 +10,12 @@
 </head>
 <body>
     <header>
-  <img id="imagem-principal" src="imagem1.jpeg">
+          <img id="imagem-principal" src="imagem1.jpeg">
           <h1>colocar um texto</h1>
-	
- </header>
-
- <main>
+	  </header>
   
-  <div class="principal">
-   <h2 strong>continuação de texto</h2>
-   <p>
-   </p>
-     </div>
- </main>
+  <h2 strong>continuação de texto</h2>
+   <p>algo</p>
+    
 </body>
 </html>
