--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 <body>
     <header>
           <img id="imagem-principal" src="imagem1.jpeg">
-          <h1>colocar um texto</h1>
+          <h1>restaurante family´s</h1>
 	  </header>
   
-  <h2 strong>continuação de texto</h2>
+  <h2 strong>já penou em comer com toda sua familia, com espaço para criança e cardápio diversificado?
+    nós somos o lugar perfeito para vocễ!</h2>
    <p>algo</p>
     
 </body>
