--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-          <img id="imagem-principal" src="imagem1.jpeg">
+          <img id="" src="imagem1.jpeg">
           <h1>restaurante family´s</h1>
 	  </header>
   
