--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	  </header>
   
   <h2 strong>já penou em comer com toda sua familia, com espaço para criança e cardápio diversificado?
-    nós somos o lugar perfeito para vocễ!</h2>
+    nós somos o lugar perfeito para vocễ</h2>
    <p>algo</p>
     
 </body>
