--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 <body>
     <header>
           <img id="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.viajenaviagem.com%2Fdestino%2Ffortaleza%2Fonde-comer%2F&psig=AOvVaw3GFupjiDNTAlIKggaUACRn&ust=1695469294795000&source=images&cd=vfe&opi=89978449&ved=0CA4QjRxqFwoTCIij4r2RvoEDFQAAAAAdAAAAABAI" src="imagem1.jpeg">
-          <h1>restaurante family´s</h1>
+          <h1>açoẽs para mudar o mundo</h1>
 	  </header>
   
-  <h2 strong>já penou em comer com toda sua familia, com espaço para criança e cardápio diversificado?
-    nós somos o lugar perfeito para vocễ</h2>
+  <h2 strong>combata os preconceitos, para um mundo melhor</h2>
    <p>algo</p>
     
 </body>
